Rename project, separate HTTP logic out into separate artifact
Major refactoring of various parts