@@ -2,6 +2,7 @@ package net.jastrab.unleashed.api.http;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -46,10 +47,6 @@ public class QueryStringBuilder {
     }
 
     private static String encode(Object value) {
-        try {
-            return URLEncoder.encode(value.toString().trim(), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        }
+        return URLEncoder.encode(value.toString().trim(), StandardCharsets.UTF_8);
     }
 }
